--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   "author": "Your Name",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
     "@types/node": "^20.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^9.31.0",
+    "globals": "^16.3.0",
     "typescript": "^5.0.0",
+    "typescript-eslint": "^8.36.0",
     "vite": "^6.3.5"
   },
   "engines": {
