--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A visual application design tool built with TypeScript",
   "main": "dist/main.js",
   "scripts": {
+    "test": "vitest",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -25,11 +26,14 @@
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "@vitest/ui": "^3.2.4",
+    "jsdom": "^22.0.0",
     "eslint": "^8.57.1",
     "globals": "^16.3.0",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.36.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=16.0.0"
