--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
     "noEmit": true,
     "allowImportingTsExtensions": true
   },
-  "include": ["src/**/*", "vite.config.ts"]
+  "include": ["src/**/*", "test/**/*", "vite.config.ts", "vitest.config.ts"]
 }
